# sr

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: release.yml
image/: __init__.py  processor.py
scripts/: install.sh  package.sh  run.sh
src/: lib.rs  main.rs
