[package]
name = "sr"
version = "0.1.0"
edition = "2021"

[lib]
name = "sr_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
anyhow = "1.0"


[features]
pyo3 = ["pyo3/extension-module"]
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
