[project]
name = "sr"
version = "0.1.0"
description = "Image super-resolution CLI tool built with Rust and PyO3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sr-vulkan>=2.0.1.1",
]
authors = [
    { name = "sr developers" }
]

[project.scripts]
sr = "sr_bindings:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3"]
module-name = "sr_bindings"
packages = ["image"]
