[project]
name = "sr"
version = "0.1.0"
description = "Image super-resolution CLI tool built with Rust and PyO3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sr-vulkan>=2.0.1.1",
    "sr-vulkan-model-realcugan>=1.0.1",
    "sr-vulkan-model-realesrgan>=1.0.1",
    "sr-vulkan-model-realsr>=1.0.1",
    "sr-vulkan-model-waifu2x>=1.0.1",
]
authors = [
    { name = "akirco" }
]
